# church-telegram-bot

./: env_sample  pyproject.toml
src/: bot.py
src/DataBase/: db.py
src/settings/: const.py
src/tgbot/handlers/: users.py
src/tgbot/keyboards/: inline.py
src/tgbot/misc/: register_all_handlers.py  set_bot_commands.py
