[tool.poetry]
name = "church-telegram-bot"
version = "0.1.0"
description = ""
authors = ["RG1ee <niwows@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.21"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
