[tool.poetry]
name = "church-telegram-bot"
version = "0.1.0"
description = ""
authors = ["RG1ee <niwows@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.21"
asyncio = "^3.4.3"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
